# internal/transport/http/handlers/dto.go
@@ -10,6 +10,15 @@ type taskMutationDTO struct {
 	Title       string            `json:"title"`
 	Description string            `json:"description"`
 	Status      taskdomain.Status `json:"status"`
+	Recurrence recurrenceDTO `json:"recurrence"`
+}
+
+type recurrenceDTO struct {
+	Type 	taskdomain.RecurrenceType `json:"type"`
+	Interval int `json:"interval,omitempty"`
+	DayOfMonth int `json:"day_of_month,omitempty"`
+	Dates []time.Time `json:"dates,omitempty"`
+	StartDate time.Time `json:"start_date,omitempty"`
 }
 
 type taskDTO struct {
@@ -17,6 +26,7 @@ type taskDTO struct {
 	Title       string            `json:"title"`
 	Description string            `json:"description"`
 	Status      taskdomain.Status `json:"status"`
+	Recurrence recurrenceDTO      `json:"recurrence"`
 	CreatedAt   time.Time         `json:"created_at"`
 	UpdatedAt   time.Time         `json:"updated_at"`
 }
@@ -27,7 +37,14 @@ func newTaskDTO(task *taskdomain.Task) taskDTO {
 		Title:       task.Title,
 		Description: task.Description,
 		Status:      task.Status,
-		CreatedAt:   task.CreatedAt,
-		UpdatedAt:   task.UpdatedAt,
+		Recurrence: recurrenceDTO{
+   			Type:       task.Recurrence.Type,
+   			Interval:   task.Recurrence.Interval,
+   			DayOfMonth: task.Recurrence.DayOfMonth,
+   			Dates:      task.Recurrence.Dates,
+   			StartDate:  task.Recurrence.StartDate,
+  		},
+  		CreatedAt: task.CreatedAt,
+  		UpdatedAt: task.UpdatedAt,
 	}
 }
